--- a/ip_repo/axi_sd_card_1.0/drivers/axi_sd_card_v1_0/src/Makefile
+++ b/ip_repo/axi_sd_card_1.0/drivers/axi_sd_card_v1_0/src/Makefile
@@ -14,7 +14,7 @@ LIBSOURCES=*.c
 OUTS = *.o
 
 libs:
-	echo "Compiling axi_sd..."
+	echo "Compiling axi_sd_card..."
 	$(COMPILER) $(COMPILER_FLAGS) $(EXTRA_COMPILER_FLAGS) $(INCLUDES) $(LIBSOURCES)
 	$(ARCHIVER) -r ${RELEASEDIR}/${LIB} ${OUTS}
 	make clean
